# logion-collator-prototype

./: .dockerignore  .gitignore  Dockerfile.build-debian11  README.md
.github/workflows/: build.yml  release-wasm.yml  rust.yml
docker/rust/: Dockerfile
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
res/: chimay-plain.json  chimay-raw.json  rococo-local-logion-plain.json  rococo-local-logion-raw.json
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: build_debian_collator.sh  build_debian_rust.sh  build_relay_chain.sh  run_collator.sh  run_validator.sh
